--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
 <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js" type="text/javascript"></script>
+<script>"//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-resource.js"</script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
 <script src="//code.angularjs.org/1.5.8/angular-cookies.js" charset="utf-8"></script>
