--- a/client/index.html
+++ b/client/index.html
@@ -13,16 +13,16 @@
   <link href="./stylesheets/style.css" rel="stylesheet" media="screen">
 </head>
 
-<div ng-view></div>
 
 <body>
 
+  <div ng-view></div>
   <!-- scripts -->
   <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js" type="text/javascript"></script>
-  <script>
-    "//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-resource.js"
+  <script src=
+    "//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-resource.js">
   </script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
