--- a/client/index.html
+++ b/client/index.html
@@ -2,43 +2,47 @@
 <html lang="en" ng-app='stubby'>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Stubby Pencil Scoring</title>
-  <!-- styles -->
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css"> -->
-  <link href="./stylesheets/style.css" rel="stylesheet" media="screen">
+    <meta charset="UTF-8">
+    <title>Stubby Pencil Scoring</title>
+    <!-- styles -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <!-- Compiled and minified CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css"> -->
+    <link href="./stylesheets/style.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="/stylesheets/kcs.css">
+    <link rel="stylesheet" href="/stylesheets/layout.css">
+    <link rel="stylesheet" href="/stylesheets/profile.css">
+    <link rel="stylesheet" href="/stylesheets/style-index.css">
 </head>
 
 
 <body>
 
-  <div ng-view></div>
-  <!-- scripts -->
-  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js" type="text/javascript"></script>
-  <script src=
-    "//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-resource.js">
-  </script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
-  <script src="//code.angularjs.org/1.5.8/angular-cookies.js" charset="utf-8"></script>
-  <script src="./js/app.js" type="text/javascript"></script>
-  <!-- controllers -->
-  <script src="./js/controllers/usercontroller.js" type="text/javascript"></script>
-  <script src="./js/controllers/gamecontroller.js" type="text/javascript"></script>
-  <script src="./js/controllers/scorecontroller.js" type="text/javascript"></script>
-  <script src="./js/controllers/profilecontroller.js" type="text/javascript"></script>
-  <!-- services -->
-  <script src="./js/services/gameservice.js" type="text/javascript"></script>
-  <script src="./js/services/scoreservice.js" type="text/javascript"></script>
-  <script src="./js/services/profileservice.js" type="text/javascript"></script>
-  <script src="./js/services/userservice.js" type="text/javascript"></script>
-  <!-- directives -->
+    <div ng-view></div>
+    <!-- scripts -->
+    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-resource.js">
+    </script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
+    <script src="//code.angularjs.org/1.5.8/angular-cookies.js" charset="utf-8"></script>
+    <script src="./js/app.js" type="text/javascript"></script>
+    <!-- controllers -->
+    <script src="./js/controllers/usercontroller.js" type="text/javascript"></script>
+    <script src="./js/controllers/gamecontroller.js" type="text/javascript"></script>
+    <script src="./js/controllers/scorecontroller.js" type="text/javascript"></script>
+    <script src="./js/controllers/profilecontroller.js" type="text/javascript"></script>
+    <!-- services -->
+    <script src="./js/services/gameservice.js" type="text/javascript"></script>
+    <script src="./js/services/scoreservice.js" type="text/javascript"></script>
+    <script src="./js/services/profileservice.js" type="text/javascript"></script>
+    <script src="./js/services/userservice.js" type="text/javascript"></script>
+    <!-- directives -->
 
 </body>
 
